try to fix travis ci build